--- a/view/frontend/layout/mondido_checkout_index.xml
+++ b/view/frontend/layout/mondido_checkout_index.xml
@@ -61,6 +61,16 @@
                                         <item name="component" xsi:type="string">uiComponent</item>
                                         <item name="displayArea" xsi:type="string">steps</item>
                                         <item name="children" xsi:type="array">
+                                            <item name="discount" xsi:type="array">
+                                                <item name="component" xsi:type="string">Magento_SalesRule/js/view/payment/discount</item>
+                                                <item name="children" xsi:type="array">
+                                                    <item name="errors" xsi:type="array">
+                                                        <item name="sortOrder" xsi:type="string">0</item>
+                                                        <item name="component" xsi:type="string">Magento_SalesRule/js/view/payment/discount-messages</item>
+                                                        <item name="displayArea" xsi:type="string">messages</item>
+                                                    </item>
+                                                </item>
+                                            </item>
                                             <item name="mondido" xsi:type="array">
                                                 <item name="component" xsi:type="string">Mondido_Mondido/js/view/mondido</item>
                                                 <item name="sortOrder" xsi:type="string">1</item>
@@ -104,6 +114,12 @@
                                                                     <item name="title" xsi:type="string" translate="true">Cart Subtotal</item>
                                                                     <item name="excludingTaxMessage" xsi:type="string" translate="true">Excl. Tax</item>
                                                                     <item name="includingTaxMessage" xsi:type="string" translate="true">Incl. Tax</item>
+                                                                </item>
+                                                            </item>
+                                                            <item name="discount" xsi:type="array">
+                                                                <item name="component"  xsi:type="string">Magento_SalesRule/js/view/summary/discount</item>
+                                                                <item name="config" xsi:type="array">
+                                                                    <item name="title" xsi:type="string" translate="true">Discount</item>
                                                                 </item>
                                                             </item>
                                                             <item name="shipping" xsi:type="array">
