--- a/view/frontend/layout/mondido_checkout_index.xml
+++ b/view/frontend/layout/mondido_checkout_index.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="checkout" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="empty" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <attribute name="class" value="checkout-index-index"/>
+        <referenceContainer name="page.wrapper">
+            <container name="checkout.header.container" as="checkout_header_container" label="Checkout Page Header Container" htmlTag="header" htmlClass="page-header" before="main.content">
+                <container name="checkout.header.wrapper" label="Checkout Page Header" as="checkout_header_wrapper" htmlTag="div" htmlClass="header content"/>
+            </container>
+        </referenceContainer>
         <referenceContainer name="content">
             <block class="Mondido\Mondido\Block\Checkout" name="mondido.checkout.root" template="Mondido_Mondido::checkout.phtml" cacheable="false">
                 <arguments>
