--- a/view/frontend/layout/mondido_checkout_index.xml
+++ b/view/frontend/layout/mondido_checkout_index.xml
@@ -66,16 +66,6 @@
                                         <item name="component" xsi:type="string">uiComponent</item>
                                         <item name="displayArea" xsi:type="string">steps</item>
                                         <item name="children" xsi:type="array">
-                                            <item name="discount" xsi:type="array">
-                                                <item name="component" xsi:type="string">Magento_SalesRule/js/view/payment/discount</item>
-                                                <item name="children" xsi:type="array">
-                                                    <item name="errors" xsi:type="array">
-                                                        <item name="sortOrder" xsi:type="string">0</item>
-                                                        <item name="component" xsi:type="string">Magento_SalesRule/js/view/payment/discount-messages</item>
-                                                        <item name="displayArea" xsi:type="string">messages</item>
-                                                    </item>
-                                                </item>
-                                            </item>
                                             <item name="mondido" xsi:type="array">
                                                 <item name="component" xsi:type="string">Mondido_Mondido/js/view/mondido</item>
                                                 <item name="sortOrder" xsi:type="string">1</item>
@@ -91,7 +81,7 @@
                                         <item name="component" xsi:type="string">Magento_Checkout/js/view/sidebar</item>
                                         <item name="displayArea" xsi:type="string">sidebar</item>
                                         <item name="config" xsi:type="array">
-                                            <item name="template" xsi:type="string">Magento_Checkout/sidebar</item>
+                                            <item name="template" xsi:type="string">Mondido_Mondido/sidebar</item>
                                             <item name="deps" xsi:type="array">
                                                 <item name="0" xsi:type="string">checkout.steps</item>
                                             </item>
@@ -191,6 +181,17 @@
                                                         <item name="children" xsi:type="array">
                                                             <!-- merge your components here -->
                                                         </item>
+                                                    </item>
+                                                </item>
+                                            </item>
+                                            <item name="discount" xsi:type="array">
+                                                <item name="component" xsi:type="string">Magento_SalesRule/js/view/payment/discount</item>
+                                                <item name="displayArea" xsi:type="string">discount</item>
+                                                <item name="children" xsi:type="array">
+                                                    <item name="errors" xsi:type="array">
+                                                        <item name="sortOrder" xsi:type="string">0</item>
+                                                        <item name="component" xsi:type="string">Magento_SalesRule/js/view/payment/discount-messages</item>
+                                                        <item name="displayArea" xsi:type="string">messages</item>
                                                     </item>
                                                 </item>
                                             </item>
