--- a/view/frontend/layout/mondido_checkout_success.xml
+++ b/view/frontend/layout/mondido_checkout_success.xml
@@ -5,14 +5,14 @@
     </head>
     <body>
         <referenceBlock name="page.main.title">
-            <block class="Magento\Checkout\Block\Onepage\Success" name="checkout.success.print.button" template="button.phtml"/>
+            <block class="Magento\Checkout\Block\Onepage\Success" name="checkout.success.print.button" template="Mondido_Mondido::button.phtml"/>
             <action method="setPageTitle">
                 <argument translate="true" name="title" xsi:type="string">Thank you for your purchase!</argument>
             </action>
         </referenceBlock>
         <referenceContainer name="content">
-            <block class="Magento\Checkout\Block\Onepage\Success" name="checkout.success" template="success.phtml" cacheable="false"/>
-            <block class="Magento\Checkout\Block\Registration" name="checkout.registration" template="registration.phtml" cacheable="false"/>
+            <block class="Magento\Checkout\Block\Onepage\Success" name="checkout.success" template="Mondido_Mondido::success.phtml" cacheable="false"/>
+            <block class="Mondido\Mondido\Block\Registration" name="checkout.registration" template="Mondido_Mondido::registration.phtml" cacheable="false"/>
         </referenceContainer>
         <container name="order.success.additional.info" label="Order Success Additional Info"/>
     </body>
