--- a/view/adminhtml/templates/info/hostedwindow.phtml
+++ b/view/adminhtml/templates/info/hostedwindow.phtml
@@ -5,19 +5,19 @@
  */
 $specificInfo = $block->getSpecificInformation();
 ?>
-<?php echo $block->escapeHtml($block->getMethod()->getTitle()); ?>
+<?= $block->escapeHtml($block->getMethod()->getTitle()); ?>
 
-<?php if ($specificInfo): ?>
+<?php if ($specificInfo) : ?>
     <table class="data-table admin__table-secondary">
-    <?php foreach ($specificInfo as $label => $value):?>
-        <tr>
-            <th><?php echo $block->escapeHtml($label)?>:</th>
-            <td>
-                <?php /* @noEscape */ echo nl2br($block->escapeHtml(implode("\n", $block->getValueAsArray($value, true))));?>
-            </td>
-        </tr>
-    <?php endforeach; ?>
+        <?php foreach ($specificInfo as $label => $value) : ?>
+            <tr>
+                <th><?= $block->escapeHtml($label)?>:</th>
+                <td>
+                    <?= /* @noEscape */ nl2br($block->escapeHtml(implode("\n", $block->getValueAsArray($value, true))));?>
+                </td>
+            </tr>
+        <?php endforeach; ?>
     </table>
 <?php endif;?>
 
-<?php echo $block->getChildHtml()?>
+<?= $block->getChildHtml()?>
