--- a/view/frontend/templates/checkout.phtml
+++ b/view/frontend/templates/checkout.phtml
@@ -1,8 +1,8 @@
 <div id="checkout" data-bind="scope:'checkout'" class="checkout-container">
     <div id="checkout-loader" data-role="checkout-loader" class="loading-mask" data-mage-init='{"checkoutLoader": {}}'>
         <div class="loader">
-            <img src="<?php /* @escapeNotVerified */ echo $block->getViewFileUrl('images/loader-1.gif'); ?>"
-                 alt="<?php /* @escapeNotVerified */ echo __('Loading...'); ?>"
+            <img src="<?= /* @escapeNotVerified */ $block->escapeHtml($block->getViewFileUrl('images/loader-1.gif')); ?>"
+                 alt="<?= /* @escapeNotVerified */ $block->escapeHtml(__('Loading...')); ?>"
                  style="position: absolute;">
         </div>
     </div>
@@ -10,12 +10,12 @@
     <script type="text/x-magento-init">
         {
             "#checkout": {
-                "Magento_Ui/js/core/app": <?php /* @escapeNotVerified */ echo $block->getJsLayout();?>
+                "Magento_Ui/js/core/app": <?= /* @escapeNotVerified */ $block->getJsLayout();?>
             }
         }
     </script>
     <script>
-        window.checkoutConfig = <?php /* @escapeNotVerified */ echo \Zend_Json::encode($block->getCheckoutConfig()); ?>;
+        window.checkoutConfig = <?= /* @escapeNotVerified */  \Zend_Json::encode($block->getCheckoutConfig()); ?>;
         // Create aliases for customer.js model from customer module
         window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
         window.customerData = window.checkoutConfig.customerData;
@@ -25,8 +25,8 @@
             'mage/url',
             'Magento_Ui/js/block-loader'
         ], function(url, blockLoader) {
-            blockLoader("<?php /* @escapeNotVerified */ echo $block->getViewFileUrl('images/loader-1.gif'); ?>");
-            return url.setBaseUrl('<?php /* @escapeNotVerified */ echo $block->getBaseUrl();?>');
+            blockLoader("<?= /* @escapeNotVerified */ $block->escapeHtml($block->getViewFileUrl('images/loader-1.gif')); ?>");
+            return url.setBaseUrl('<?= /* @escapeNotVerified */ $block->escapeHtml($block->getBaseUrl());?>');
         })
     </script>
 </div>
