--- a/view/frontend/templates/error.phtml
+++ b/view/frontend/templates/error.phtml
@@ -1,8 +1,8 @@
 <script>
     var isInIframe = (window.location != window.parent.location) ? true : false;
     if (isInIframe == true) {
-        window.top.location.href = "<?php echo $block->getUrl('checkout/cart'); ?>";
+        window.top.location.href = "<?= $block->escapeHtml($block->getUrl('checkout/cart')); ?>";
     } else {
-        window.location.href = "<?php echo $block->getUrl('checkout/cart'); ?>";
+        window.location.href = "<?= $block->escapeHtml($block->getUrl('checkout/cart')); ?>";
     }
 </script>
