--- a/view/frontend/templates/redirect_to_success.phtml
+++ b/view/frontend/templates/redirect_to_success.phtml
@@ -1,8 +1,8 @@
 <script>
     var isInIframe = (window.location != window.parent.location) ? true : false;
     if (isInIframe == true) {
-        window.top.location.href = "<?php echo $block->getUrl('mondido/checkout/success'); ?>";
+        window.top.location.href = "<?=  $block->escapeHtml($block->getUrl('mondido/checkout/success')); ?>";
     } else {
-        window.location.href = "<?php echo $block->getUrl('mondido/checkout/success'); ?>";
+        window.location.href = "<?= $block->escapeHtml($block->getUrl('mondido/checkout/success')); ?>";
     }
 </script>
